# swagger.json
@@ -5,7 +5,7 @@
     "description": "Users Api",
     "version": "1.0.0"
   },
-  "host": "//cse-341-project2-ojkw.onrender.com",
+  "host": "cse-341-project2-ojkw.onrender.com",
   "basePath": "/",
   "schemes": [
     "https"
@@ -182,6 +182,91 @@
           "500": {
             "description": "Internal Server Error"
           }
+        }
+      }
+    },
+      "/contact": {
+      "get": {
+        "description": "Get all contacts",
+        "produces": ["application/json"],
+        "responses": {
+          "200": { "description": "OK" },
+          "400": { "description": "Bad Request" }
+        }
+      },
+      "post": {
+        "description": "Create a new contact",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "parentFirstName": { "example": "any" },
+                "parentLastName": { "example": "any" },
+                "cellNumber": { "example": "any" },
+                "relationship": { "example": "any" },
+                "allergies": { "example": "any" },
+                "vaccinationStatus": { "example": "any" },
+                "weight": { "example": "any" }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": { "description": "Created" },
+          "400": { "description": "Bad Request" },
+          "500": { "description": "Internal Server Error" }
+        }
+      }
+    },
+    "/contact/{id}": {
+      "get": {
+        "description": "Get a contact by ID",
+        "parameters": [
+          { "name": "id", "in": "path", "required": true, "type": "string" }
+        ],
+        "responses": {
+          "200": { "description": "OK" },
+          "404": { "description": "Not Found" }
+        }
+      },
+      "put": {
+        "description": "Update a contact",
+        "parameters": [
+          { "name": "id", "in": "path", "required": true, "type": "string" },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "parentFirstName": { "example": "any" },
+                "parentLastName": { "example": "any" },
+                "cellNumber": { "example": "any" },
+                "relationship": { "example": "any" },
+                "allergies": { "example": "any" },
+                "vaccinationStatus": { "example": "any" },
+                "weight": { "example": "any" }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": { "description": "No Content" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" }
+        }
+      },
+      "delete": {
+        "description": "Delete a contact",
+        "parameters": [
+          { "name": "id", "in": "path", "required": true, "type": "string" }
+        ],
+        "responses": {
+          "204": { "description": "No Content" },
+          "404": { "description": "Not Found" }
         }
       }
     }
